language_tests/source_files/invalid/move_out_of_borrow_method.tr
// Test: Move Out Of Borrow (Method)
// Verifies that calling a by-value method on a borrowed non-Copy type is a compilation error.

import std.iter.Iterable
import std.iter.Iterator

struct Container {
    data: int32
}

struct ContainerIterator {
    idx: int32
}

impl Iterator for ContainerIterator {
    type Element = int32
    func next(&mut self) -> Optional[int32] {
        return .none
    }
}

impl Iterable for Container {
    type Iterator = ContainerIterator
    type Element = int32
    func makeIterator(self) -> Self.Iterator {
        return ContainerIterator { idx: 0 }
    }
}

func main() {
    var c = Container { data: 42 }
    var borrow = &c
    
    // ERROR: cannot move out of borrowed content
    var iter = borrow.makeIterator() 
}
